2011-01-16	Stephan Linz <linz@li-pro.net>

	* platform: upgrade to u-boot-2010.12

2011-01-09	Stephan Linz <linz@li-pro.net>

	* common: initial version Xilinx-ML605-MMU-full-12.3
